src/objects/Monitoring_Activity__c.object
<CustomObject>
    <description>Monitoring Activities associated to Monitoring Plans.</description>
    <fields>
        <fullName>Activity_Canceled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activity Canceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Complete__c</fullName>
        <formula>IF(ISNULL(Record_Completed_Date__c),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CC_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CC Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Changes_to_Plan_Comments__c</fullName>
        <label>Changes to Plan/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Monitoring Activities Lookup</label>
        <referenceTo>Grant_Close_Out__c</referenceTo>
        <relationshipLabel>Open Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_closed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed Monitoring Activities</label>
        <referenceTo>Grant_Close_Out__c</referenceTo>
        <relationshipLabel>Closed Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Completion_Date__c</fullName>
        <label>Follow Up Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_up_Planned_Date__c</fullName>
        <label>Follow-up Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Close_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Close Out</label>
        <referenceTo>Grant_Close_Out__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactivate_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactivate Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Record_Reason__c</fullName>
        <label>Inactive Record (Reason)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiating_Office__c</fullName>
        <label>Initiating Office</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint – Financial</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Staff_Notes__c</fullName>
        <label>Internal Staff Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>PO</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>GO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Length</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Award_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Award Name</label>
        <referenceTo>Master_Award__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_Activity__c</fullName>
        <label>Monitoring Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Programmatic &amp; Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Visit – Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drawdown Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Compliance Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site Training/Technical Assistance (T/TA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Standards review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeted/Issue-based Site Visit</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Monitoring_Fiscal_Year__c</fullName>
        <defaultValue>&quot;2017&quot;</defaultValue>
        <label>Monitoring Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Plan__c</fullName>
        <label>Monitoring Plan</label>
        <referenceTo>Monitoring_Plan__c</referenceTo>
        <relationshipLabel>Monitoring Activities</relationshipLabel>
        <relationshipName>Monitoring_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Team_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Team User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Grants Officer</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Program Officer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Monitoring_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Month__c</fullName>
        <label>Planned Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Completed_Date__c</fullName>
        <label>Record Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Monitoring Activity</label>
    <nameField>
        <displayFormat>MA-{0000}</displayFormat>
        <label>Monitoring Activity Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actual_Date_within_Fiscal_Year</fullName>
        <active>true</active>
        <description>The fiscal year is from October the year before the fiscal year until september current year.
Ex : If Monitoring Fiscal year is 2017, then it wont fire a validation if the date is between Oct 2016 until end of Sep 2017</description>
        <errorConditionFormula>IF(OR((MONTH(  Actual_Date__c  ) &gt;= 10 &amp;&amp; YEAR (Actual_Date__c) = VALUE( Monitoring_Fiscal_Year__c )-1), (MONTH( Actual_Date__c ) &lt;=9 &amp;&amp; YEAR (Actual_Date__c) = VALUE( Monitoring_Fiscal_Year__c ))),

False, True)</errorConditionFormula>
        <errorDisplayField>Actual_Date__c</errorDisplayField>
        <errorMessage>Actual Date Should be within the Monitoring Fiscal Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FollowUpCompletedChecked</fullName>
        <active>true</active>
        <errorConditionFormula>IF(  Follow_Up_Completed__c  = True &amp;&amp;  ISBLANK( Follow_Up_Completion_Date__c ), True, False)</errorConditionFormula>
        <errorDisplayField>Follow_Up_Completion_Date__c</errorDisplayField>
        <errorMessage>Please enter a Follow Up Completed Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FollowUpRequiredChecked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Follow_Up_Required__c = True &amp;&amp;  ISBLANK(Follow_up_Planned_Date__c), True, False)</errorConditionFormula>
        <errorDisplayField>Follow_up_Planned_Date__c</errorDisplayField>
        <errorMessage>Please enter a Follow Up Planned Date because Follow up is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveRecordChecked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Inactivate_Record__c = True &amp;&amp;  Inactive_Record_Reason__c  = null, True, False)</errorConditionFormula>
        <errorDisplayField>Inactive_Record_Reason__c</errorDisplayField>
        <errorMessage>Please enter the reason for Inactivate Record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>InactiveRecordUnChecked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Inactivate_Record__c  = false &amp;&amp;  Inactive_Record_Reason__c  &lt;&gt; null, True, False)</errorConditionFormula>
        <errorDisplayField>Inactive_Record_Reason__c</errorDisplayField>
        <errorMessage>You cannot enter an Inactivate Record Reason when Inactivate Record is Unchecked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year</fullName>
        <active>true</active>
        <description>Requires 4 characters in the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>LEN(TRIM( Monitoring_Fiscal_Year__c  ))&lt;4</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Requires 4 characters in the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Monitoring_Fiscal_Year_Number_only</fullName>
        <active>true</active>
        <description>Requires only numbers entered into the Monitoring Fiscal Year field.</description>
        <errorConditionFormula>NOT(ISNUMBER(  Monitoring_Fiscal_Year__c  ))</errorConditionFormula>
        <errorDisplayField>Monitoring_Fiscal_Year__c</errorDisplayField>
        <errorMessage>Only enter numbers into the Monitoring Fiscal Year field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Schedule_Date_within_Fiscal_Year</fullName>
        <active>true</active>
        <description>The fiscal year is from October the year before the fiscal year until september current year.
Ex : If Monitoring Fiscal year is 2017, then it wont fire a validation if the date is between Oct 2016 until end of Sep 2017</description>
        <errorConditionFormula>IF(OR((MONTH( Scheduled_Date__c ) &gt;= 10 &amp;&amp; YEAR (Scheduled_Date__c) = VALUE( Monitoring_Fiscal_Year__c )-1), (MONTH( Scheduled_Date__c ) &lt;=9 &amp;&amp; YEAR (Scheduled_Date__c) = VALUE( Monitoring_Fiscal_Year__c ))), 

False, True)</errorConditionFormula>
        <errorDisplayField>Scheduled_Date__c</errorDisplayField>
        <errorMessage>Scheduled Date should be within the Monitoring Fiscal Year</errorMessage>
    </validationRules>
</CustomObject>